kubernetes/microblog-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: microblog-svc
  labels:
    app: microblog
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 5000
    nodePort: 30080
  selector:
    app: microblog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microblog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microblog
  template:
    metadata:
      labels:
        app: microblog
    spec:
      containers:
      - name: microblog
        image: morper/microblog:no-statsd
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 20
