kubernetes/microblog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microblog-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: microblog.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microblog-svc
                port:
                  number: 8080
